modify to work with tonylanera.com

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Highlight:   The initial exercise had hard coded an object for each letter, whic
       <title>Keyboard Play</title>
       <style>
          html, body {
-            height: 100%;
+            height: 99.8417701721191475%;
             margin: 0;
             padding: 0;
          }
