add link to tonylanera.com

--- a/keyBoardPlay.html
+++ b/keyBoardPlay.html
@@ -20,11 +20,11 @@ Highlight:   The initial exercise had hard coded an object for each letter, whic
 <!DOCTYPE html>
 <html>
    <head>
-      <meta charset="utf-8">
+      <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes" />
       <title>Keyboard Play</title>
       <style>
          html, body {
-            height: 99.8417701721191475%;
+            height: 99.83%;
             margin: 0;
             padding: 0;
          }
@@ -135,6 +135,7 @@ Highlight:   The initial exercise had hard coded an object for each letter, whic
       </script>
    </head>
    <body>
-      <canvas id="play" resize></canvas>
+      <canvas id="play" resize>
+      </canvas>
    </body>
 </html>
