Added copyright to footer and favicon to browser

--- a/keyBoardPlay.html
+++ b/keyBoardPlay.html
@@ -21,6 +21,7 @@ Highlight:   The initial exercise had hard coded an object for each letter, whic
 <html>
    <head>
       <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes" />
+      <link rel=icon href="img/favicon.ico">
       <title>Keyboard Play</title>
       <style>
          html, body {
@@ -156,7 +157,7 @@ Highlight:   The initial exercise had hard coded an object for each letter, whic
       <canvas id="play" resize>
       </canvas>
    </body>
-   <footer class="footer">
-        <p>Press Any Key Between A to Z - KeyBoardPlay - Created by <a href="/">Tony Lanera</a></p>  
+   <footer>
+        <p>Press Any Key Between A to Z - KeyBoardPlay - &copy 2016 Created by <a href="/">Tony Lanera</a></p>  
    </footer>
 </html>
